[TG-6412] fix alignment in the PriceAndDiscountTip

--- a/src/apps/webclient/src/routes/Menu/components/BoxSummary/Banner/PriceAndDiscountTip/PriceAndDiscountTip.css
+++ b/src/apps/webclient/src/routes/Menu/components/BoxSummary/Banner/PriceAndDiscountTip/PriceAndDiscountTip.css
@@ -13,7 +13,7 @@
     color: FS-800;
 
     /* When in button, override default centering. */
-    text-align: start;
+    text-align: left;
 
     /* Space between the information and the arrow. */
     margin-right: 1rem;
